# weather-api-Ng

./: README.MD  main.py  pyproject.toml  service_account.json
scrapper/: __init__.py  google_sheet.py  scrapper.py
tests/: test_scrappper.py
