[tool.poetry]
name = "weather-scraper-api"
version = "0.1.0"
description = "A FastAPI-based web service that scrapes weather data and writes it to Google Sheets."
authors = ["Aderounmu Adeyemi <ayemiade2020@gmail.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
fastapi = "^0.109.0"
uvicorn = "^0.27.0"
requests = "^2.31.0"
beautifulsoup4 = "^4.12.3"
gspread = "^5.7.2"
oauth2client = "^4.1.3"

[tool.poetry.dev-dependencies]
pytest = "^8.0.0"
black = "^23.12.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
